--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,6 +80,10 @@ h2, .name {
   text-align:left;
 }
 
+h2 {
+  text-align: center;
+}
+
 .herotext {
   position: absolute;
   margin-left: 120px;
@@ -110,13 +114,30 @@ h2, .name {
 .flowspaceproject {
   background-color: #FFECFF;
   width: 1320px;
-  height: 800px;
+  height: 700px;
+}
+
+.flowspacemockup {
   display: inline-block;
 }
 
 .flowspacemockup img {
   width: 725px;
+  padding-top: 150px;
+  padding-left: 60px;
+  display: inline-block;
 }
+
+.projecttext {
+  display: inline-block;
+  width: 315px;
+  position: absolute;
+  height: 194.06px;
+  left: 947.83px;
+  top: 1050.02px;
+
+}
+
 
 h3 {
     font-family: raleway;
@@ -124,22 +145,67 @@ h3 {
     font-size: 32px;
 }
 
-.projecttext {
-  width: 315px;
-  position: absolute;
-}
 
 /** PROCESS **/
 
-#process .skill {
-    text-align: center;
-    width: 203px;
-    display: inline-block;
+#process {
+  width: 1320px;
+  height: 700px;
 }
 
+#process .skill {
+    text-align: center;
 
-h4 {
+}
+
+.skill {
+  position: relative;
+  width: 203px;
+  height: 246.76px;
+  display: inline-block;
+}
+
+img .skill {
+  display: inline-block;
+}
+
+.skill h4 {
     font-size: 18px;
     font-weight: bold;
     padding-bottom: 20px;
+}
+
+.image {
+  align-content: center;
+}
+
+/** TESTIMONIALS **/
+
+.testimonials {
+  background-color: rgba(12, 202, 242, 0.15);
+  width: 1320px;
+  height: 500px;
+  display: inline-block;
+}
+
+.testimonials img {
+   display: block;
+}
+
+.phototestimonial {
+  display: inline-block;
+}
+
+ .testimonials p {
+  width: 558px;
+  display: inline-block;
+}
+
+/** Footer **/
+footer {
+  height: 350px;
+}
+
+.footertext {
+  font-size: 48px;
 }
