--- a/CSS/project1.css
+++ b/CSS/project1.css
@@ -58,7 +58,7 @@ padding-bottom: 60px;
 }
 
 .hero {
-  background-image: url(images/wave.svg);
+  background-image: url(../images/wave.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto;
